--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ARTLIXIR - Art Auction House</title>
-    <link rel="stylesheet" href="assets/css/index.css">
-    <link rel="stylesheet" href="assets/css/navigation.css">
+    <link rel="stylesheet" href="assets/assets/css/index.css">
+    <link rel="stylesheet" href="css/navigation.css">
     
 </head>
 <body>
     <nav class="nav">
         <a href="#" class="logo">
             <div class="logo-icon">
-                <img src="assets/logo.png" alt="Logo">
+                <img src="/assets/logo.png" alt="Logo">
             </div>
             ARTLIXIR
         </a>
