--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ARTLIXIR - Art Auction House</title>
     <link rel="stylesheet" href="assets/css/index.css">
-    <link rel="stylesheet" href="./assets/css/navigation.css">
+    <link rel="stylesheet" href="assets/css/navigation.css">
     
 </head>
 <body>
