--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     </section>
 
     <section class="timer-section">
-        <div class="countdown" id="countdown">44 : 09 : 33 : 49</div>
+        <div class="countdown" id="countdown">00 : 09 : 33 : 49</div>
         <div>
             <h2>ARTLIXIR ART AUCTION</h2>
-            <p>2ND DECEMBER 2024 13:00</p>
+            <p>10TH DECEMBER 2024 13:00</p>
         </div>
     </section>
 
@@ -178,7 +178,7 @@ document.querySelector('.close-modal').addEventListener('click', closeModal);
     <script>
         // Countdown Timer
         function updateCountdown() {
-            const targetDate = new Date('December 30, 2024 13:00:00').getTime();
+            const targetDate = new Date('December 10, 2024 13:00:00').getTime();
             
             setInterval(() => {
                 const now = new Date().getTime();
